<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_dog"
        android:id="@+id/checkBoxDog"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_cat"
        android:id="@+id/checkBoxCat"
        android:layout_below="@+id/checkBoxDog"
        android:layout_alignLeft="@+id/checkBoxDog"
        android:layout_alignStart="@+id/checkBoxDog"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_chicken"
        android:id="@+id/checkBoxChicken"
        android:layout_below="@+id/checkBoxCat"
        android:layout_alignLeft="@+id/checkBoxCat"
        android:layout_alignStart="@+id/checkBoxCat"
        android:checked="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showButton"
        android:id="@+id/showButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textviewShow"
        android:id="@+id/textViewShow"
        android:layout_below="@+id/showButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp" />
</RelativeLayout>
